force-app/main/default/objects/DNBConnect__DNB_Connect_Setting__mdt/DNBConnect__DNB_Connect_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This is used to store various global and profile level settings related to DNB Connect App</description>
    <label>DNB Connect Setting</label>
    <pluralLabel>DNB Connect Settings</pluralLabel>
</CustomObject>