force-app/main/default/objects/DNBConnect__DNB_Connect_Setting__mdt/fields/DNBConnect__Settings__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__Settings__c</fullName>
    <label>Settings</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>