force-app/main/default/objects/DNBConnect__DNB_Connect_Setting__mdt/fields/DNBConnect__testField__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__testField__c</fullName>
    <label>testField</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>