force-app/main/default/objects/DNBConnect__DNB_Connect_Setting__mdt/fields/DNBConnect__Translations__c.field-meta.xml
<CustomField>
    <fullName>DNBConnect__Translations__c</fullName>
    <label>Translations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>